<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/favoriteLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layoutDescription="@xml/scene_favorite_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/dislikeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dislike"
            android:src="@drawable/ic_like_outline"
            app:tint="?attr/colorControlNormal" />

        <ImageView
            android:id="@+id/likeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/like"
            android:src="@drawable/ic_like"
            app:tint="@color/red" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <ImageView
        android:id="@+id/shareIcon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_share"
        app:layout_constraintStart_toEndOf="@id/favoriteLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorControlNormal" />

</androidx.constraintlayout.widget.ConstraintLayout>
